WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304289
AX: [LiveRegionManagement] Buttons aren't included in live region announcements
https://bugs.webkit.org/show_bug.cgi?id=304289
Summary
AX: [LiveRegionManagement] Buttons aren't included in live region announcements
Joshua Hoffman
Reported
2025-12-16 15:04:15 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Joshua Hoffman
Comment 1
2025-12-16 15:04:19 PST
<
rdar://problem/166649406
>
Joshua Hoffman
Comment 2
2025-12-16 15:06:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55514
EWS
Comment 3
2025-12-17 09:47:28 PST
Committed
304607@main
(5bf123876b61): <
https://commits.webkit.org/304607@main
> Reviewed commits have been landed. Closing PR #55514 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug