AX: [LiveRegionManagement] Buttons aren't included in live region announcements https://bugs.webkit.org/show_bug.cgi?id=304289 rdar://166649406

Reviewed by Tyler Wilcock.

Buttons return their inner text via `title()`, which was not in the consideration criteria
for live region objects. Now, we check if leaf elements have non-empty title before excluding
them.

Test: accessibility/mac/live-regions/live-region-button.html

* LayoutTests/accessibility/mac/live-regions/live-region-button-expected.txt: Added.
* LayoutTests/accessibility/mac/live-regions/live-region-button.html: Added.
* Source/WebCore/accessibility/AXCoreObject.cpp:
(WebCore::AXCoreObject::descriptionAttributeValue const):
(WebCore::AXCoreObject::title const):
* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AXLiveRegionManager.cpp:
(WebCore::AXLiveRegionManager::shouldIncludeInSnapshot const):

Canonical link: https://commits.webkit.org/304607@main